--- a/BMCSDL_Lab3/App.config
+++ b/BMCSDL_Lab3/App.config
@@ -6,6 +6,9 @@
         <add name="BMCSDL_Lab3.Properties.Settings.QLSVConnectionString"
             connectionString="Data Source=LGG-TH-01\DANG;Initial Catalog=QLSV;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="BMCSDL_Lab3.Properties.Settings.QLSVNhomConnectionString"
+            connectionString="Data Source=LGG-TH-01\DANG;Initial Catalog=QLSVNhom;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
