--- a/BMCSDL_Lab3/BMCSDL_Lab3.csproj
+++ b/BMCSDL_Lab3/BMCSDL_Lab3.csproj
@@ -47,6 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Functions.cs" />
+    <Compile Include="QLSVNhomDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLSVNhomDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Source\Form_modifyStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Source\Form_modifyStudent.Designer.cs">
+      <DependentUpon>Form_modifyStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Source\Form_StudentList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +120,17 @@
     </None>
     <None Include="QLSVDataSet.xss">
       <DependentUpon>QLSVDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLSVNhomDataSet.xsc">
+      <DependentUpon>QLSVNhomDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLSVNhomDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLSVNhomDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLSVNhomDataSet.xss">
+      <DependentUpon>QLSVNhomDataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
