--- a/App/BMCSDL_Lab3/BMCSDL_Lab3.csproj
+++ b/App/BMCSDL_Lab3/BMCSDL_Lab3.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cryptography.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="QLSVNhomDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
